<resources>
    <string name="app_name">Easygas</string>
    <string name="go_to_map">Olhar Mapa</string>
    <string name="sign_in">Fazer Login</string>
    <string name="powerd_by">Powered By Pernambuco Soluções</string>
    <string name="sign_up"><u>Não possui cadastro?</u></string>
    <string name="name">Nome:</string>
    <string name="email">Email:</string>
    <string name="password">Senha:</string>
    <string name="confirm_password">Confirmar Senha:</string>
    <string name="sign_up_user">Cadastrar</string>
    <string name="user">Usuário</string>
    <string name="password_without_point">Senha</string>
    <string name="hint_type_your_email">Digite seu email</string>
    <string name="hint_type_your_password">Digite a sua senha</string>
    <string name="sign_in_button">Login</string>
    <string name="login_or">Or</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
