<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFundoSplash"
    tools:context=".ResisterActivity">

    <TextView
        android:id="@+id/lblResisterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_resister_name"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:inputType="textPersonName"
        android:imeOptions="actionNext"
        android:background="@drawable/edittext_resister"
        android:maxLength="40"
        android:maxLines="1"
        android:hint="Ex: João Pedro"
        android:textColorHint="@color/colorWhite"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblResisterName" />

    <TextView
        android:id="@+id/lblResisterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="35dp"
        android:text="@string/email"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_resister_name" />

    <EditText
        android:id="@+id/edit_resister_email"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_resister"
        android:maxLength="40"
        android:maxLines="1"
        android:hint="Ex: joaopedro@exemplo.com"
        android:textColorHint="@color/colorWhite"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblResisterEmail" />

    <TextView
        android:id="@+id/lblResisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="35dp"
        android:text="@string/password"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_resister_email" />

    <EditText
        android:id="@+id/edit_resister_password"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_resister"
        android:inputType="textPassword"
        android:maxLength="40"
        android:maxLines="1"
        android:hint="********"
        android:textColorHint="@color/colorWhite"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblResisterPassword" />

    <TextView
        android:id="@+id/lblResisterConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="35dp"
        android:text="@string/confirm_password"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_resister_password" />

    <EditText
        android:id="@+id/edit_resister_confirm_password"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_resister"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:maxLength="40"
        android:maxLines="1"
        android:hint="********"
        android:textColorHint="@color/colorWhite"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblResisterConfirmPassword" />

    <Button
        android:id="@+id/btn_sign_up_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/splash_button"
        android:text="@string/sign_up_user"
        android:textAllCaps="false"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_resister_confirm_password" />


</androidx.constraintlayout.widget.ConstraintLayout>